kubernetes/spring-app/deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
spec:
  selector:
    matchLabels:
      app: spring-app
  replicas: 1
  template:
    metadata:
      name: spring-app
      labels:
        app: spring-app
    spec:
      containers:
        - name: spring-app
          imagePullPolicy: Always
          image: lucastercas/spring:latest
          resources:
            limits:
              memory: "512Mi"
              cpu: "1000m"
          ports:
            - containerPort: 8080
