kubernetes/spring-app/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: spring-app
spec:
  type: ClusterIP
  selector:
    app: spring-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: spring-app-np
# spec:
#   type: NodePort
#   selector:
#     app: spring-app
#   ports:
#   - port: 80
#     targetPort: 8080
#     nodePort: 30045
