kubernetes/spring-app/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: default-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: spring.local.com
      http:
        paths:
          - path: /
            backend:
              serviceName: spring-app
              servicePort: 80
